I fixed the spacing in the nav.php file. I also messed with the css for the menu so that it is fixed now and the button hides it. I cannot get the menu button to hide though so I will work on that next.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,14 @@
 #accordian {
 		background:#003040;
 		width: 250px;
-		margin: 50px auto 0 auto;
+		margin: 50px auto 0 15px;
 		color: white;
 		box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.6), 0 0 200px 1px rgba(255, 255, 255, 0.5);
+		position:fixed;
 }
-
+.exitButton{
+		position:fixed;
+}
 #accordian h3 {
 		background: #003040;
 		background: linear-gradient(#003040, #002535);
